Actions
Bug #12103
closedlibnisdb: control reaches end of non-void function
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Buils errors with gcc 8:
db_index.cc: In member function 'int db_index::dump(char*)': db_index.cc:332:35: error: control reaches end of non-void function [-Werror=return-type] pickle_index f(file, PICKLE_WRITE); ^ db_table.cc: In member function 'int db_table::dump(char*)': db_table.cc:1110:35: error: control reaches end of non-void function [-Werror=return-type] pickle_table f(file, PICKLE_WRITE); /* may need to use APPEND mode */ ^ nis_db.cc: In function 'db_status db_abort_merge_dict()': nis_db.cc:277:1: error: control reaches end of non-void function [-Werror=return-type] } ^ cc1plus: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b3bec642b8103dc975b71525d34b278dbf0409db
commit b3bec642b8103dc975b71525d34b278dbf0409db Author: Toomas Soome <tsoome@me.com> Date: 2020-02-20T17:16:25.000Z 12103 libnisdb: control reaches end of non-void function Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions